<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">DevicePolicyDemo</string>
    <string name="enable_instructions">
        This application is not currently an active administrator.
        Please Enable Device Admin first.</string>
    <string name="enable_device_admin">Enable Device Admin</string>
    <string name="device_password">Set Device Password</string>
    <string name="device_password_ok">Current Password is Sufficient</string>
    <string name="lock_device">Lock Device</string>
    <string name="reset_device">Reset Device</string>
    <string name="reset_title">Factory Reset Device</string>
    <string name="reset_message">Are you sure? You will lose everything!</string>
    <string name="device_admin_enabled">Device Admin Enabled</string>
    <string name="device_admin_disabled">Device Admin Disabled</string>
    <string name="device_password_changed">Password Successfully Changed</string>
    <string name="device_admin_required">
        This Application is not yet set at the device owner.</string>
</resources>
