<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:gravity="center">

    <Button
        android:id="@+id/toggle_device_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_device_admin"
        android:onClick="onClick"/>
    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/enable_instructions"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button_device_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_password"
        android:onClick="onClick" />

    <Button
        android:id="@+id/button_lock_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lock_device"
        android:onClick="onClick" />

    <Button
        android:id="@+id/button_reset_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_device"
        android:onClick="onClick" />

</LinearLayout>